KIALI-2639 Support 3scale adapter Istio config
