# swagger.json
@@ -2797,6 +2797,292 @@
           }
         }
       }
+    },
+    "/threescale": {
+      "get": {
+        "description": "Endpoint to check if threescale adapter is present in the cluster and if user can write adapter config",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "getThreeScaleInfo",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleInfoResponse"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      }
+    },
+    "/threescale/handlers": {
+      "get": {
+        "description": "Endpoint to fetch threescale handlers generated from Kiali",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "getThreeScaleHandlers",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleHandlersResponse"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      },
+      "post": {
+        "description": "Endpoint to create a new threescale handler+instance generated by Kiali",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "postThreeScaleHandlers",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleHandlersResponse"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      }
+    },
+    "/threescale/handlers/{threescaleHandlerName}": {
+      "delete": {
+        "description": "Endpoint to delete an existing threescale handler+instance generated by Kiali",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "deleteThreeScaleHandler",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The ThreeScaleHandler name.",
+            "name": "threescaleHandlerName",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleHandlersResponse"
+          },
+          "404": {
+            "$ref": "#/responses/notFoundError"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      },
+      "patch": {
+        "description": "Endpoint to update an existing threescale handler generated by Kiali",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "patchThreeScaleHandler",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The ThreeScaleHandler name.",
+            "name": "threescaleHandlerName",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleHandlersResponse"
+          },
+          "404": {
+            "$ref": "#/responses/notFoundError"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      }
+    },
+    "/threescale/namespaces/{namespace}/services/{service}": {
+      "get": {
+        "description": "Endpoint to get an existing threescale rule for a given service",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "getThreeScaleService",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The namespace name.",
+            "name": "namespace",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The service name.",
+            "name": "service",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleRuleResponse"
+          },
+          "404": {
+            "$ref": "#/responses/notFoundError"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      },
+      "post": {
+        "description": "Endpoint to create a new threescale rule for a given service",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "postThreeScaleService",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The namespace name.",
+            "name": "namespace",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The service name.",
+            "name": "service",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleRuleResponse"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      },
+      "delete": {
+        "description": "Endpoint to delete an existing threescale rule for a given service",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "deleteThreeScaleService",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The namespace name.",
+            "name": "namespace",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The service name.",
+            "name": "service",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleRuleResponse"
+          },
+          "404": {
+            "$ref": "#/responses/notFoundError"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      },
+      "patch": {
+        "description": "Endpoint to update an existing threescale rule for a given service",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "operationId": "patchThreeScaleService",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The namespace name.",
+            "name": "namespace",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "The service name.",
+            "name": "service",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/threeScaleRuleResponse"
+          },
+          "404": {
+            "$ref": "#/responses/notFoundError"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -4708,6 +4994,75 @@
       "type": "string",
       "x-go-package": "github.com/kiali/kiali/vendor/k8s.io/apimachinery/pkg/apis/meta/v1"
     },
+    "ThreeScaleHandler": {
+      "description": "ThreeScaleHAndler represents the minimal info that a user needs to know from the UI to link a service with 3Scale site",
+      "type": "object",
+      "properties": {
+        "accessToken": {
+          "type": "string",
+          "x-go-name": "AccessToken"
+        },
+        "name": {
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "serviceId": {
+          "type": "string",
+          "x-go-name": "ServiceId"
+        },
+        "systemUrl": {
+          "type": "string",
+          "x-go-name": "SystemUrl"
+        }
+      },
+      "x-go-package": "github.com/kiali/kiali/models"
+    },
+    "ThreeScaleHandlers": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/ThreeScaleHandler"
+      },
+      "x-go-package": "github.com/kiali/kiali/models"
+    },
+    "ThreeScaleInfo": {
+      "description": "ThreeScaleInfo shows if 3scale adapter is enabled in cluster and if user has permissions on adapter's configuration",
+      "type": "object",
+      "properties": {
+        "enabled": {
+          "type": "boolean",
+          "x-go-name": "Enabled"
+        },
+        "permissions": {
+          "$ref": "#/definitions/ResourcePermissions"
+        }
+      },
+      "x-go-package": "github.com/kiali/kiali/models"
+    },
+    "ThreeScaleServiceRule": {
+      "type": "object",
+      "properties": {
+        "appName": {
+          "type": "string",
+          "x-go-name": "AppName"
+        },
+        "serviceName": {
+          "type": "string",
+          "x-go-name": "ServiceName"
+        },
+        "serviceNamespace": {
+          "type": "string",
+          "x-go-name": "ServiceNamespace"
+        },
+        "versions": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Versions"
+        }
+      },
+      "x-go-package": "github.com/kiali/kiali/models"
+    },
     "Time": {
       "description": "+protobuf.options.marshal=false\n+protobuf.as=Timestamp\n+protobuf.options.(gogoproto.goproto_stringer)=false",
       "type": "object",
@@ -5565,6 +5920,24 @@
       "description": "HTTP status code 200 and statusInfo model in data",
       "schema": {
         "$ref": "#/definitions/StatusInfo"
+      }
+    },
+    "threeScaleHandlersResponse": {
+      "description": "List of ThreeScale handlers created from Kiali to be used in the adapter's configuration",
+      "schema": {
+        "$ref": "#/definitions/ThreeScaleHandlers"
+      }
+    },
+    "threeScaleInfoResponse": {
+      "description": "Return if ThreeScale adapter is enabled in Istio and if user has permissions to write adapter's configuration",
+      "schema": {
+        "$ref": "#/definitions/ThreeScaleInfo"
+      }
+    },
+    "threeScaleRuleResponse": {
+      "description": "Return Threescale rule definition for a given service",
+      "schema": {
+        "$ref": "#/definitions/ThreeScaleServiceRule"
       }
     },
     "tokenResponse": {
